--- a/BlogApp/appsettings.json
+++ b/BlogApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "AppDb": "Server=.;DataBase=BlogAppDb;Integrated Security=true;TrustServerCertificate=true;"
+  }
 }
