--- a/BlogApp/BlogApp.csproj
+++ b/BlogApp/BlogApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="BlazorCKEditor" Version="2.0.2" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.36">
       <PrivateAssets>all</PrivateAssets>
